--- a/python/hij/pyproject.toml
+++ b/python/hij/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipython>=9.2.0",
+    "jupyter>=1.1.1",
     "music21>=9.5.0",
 ]
